--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "xml2js": "^0.4.15"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "browserify": "^12.0.1",
     "chai": "^3.5.0",
     "eslint": "^4.1.1",
